SAKIII-1654 Scrollbar shown on right hand side of screen for search results under chrome fixed.

--- a/dev/_css/sakai/sakai.core.2.css
+++ b/dev/_css/sakai/sakai.core.2.css
@@ -1,6 +1,7 @@
 .fixed-container {
-    padding: 0 20px;
+    padding:0 20px;
     width: 920px;
+    overflow:hidden;
 }
 
 /********************************************/
